# duin-faucet

./: README.md
backend/: .gitignore  package.json  pnpm-lock.yaml
backend/prisma/: schema.prisma
backend/src/: config.ts  index.ts
backend/src/constants/: defaultMessages.ts  systemPrompts.ts  testIdeas.ts
deploycontract/: config.ts  index.ts  pnpm-lock.yaml
deploycontract/typechain-types/: hardhat.d.ts
duin-functions/: README.md
duin-functions/addingredients/: index.ts  package.json  pnpm-lock.yaml
duin-functions/chunky-smartcontracts/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
duin-functions/deploycontract/: .gitignore  config.ts  index.ts  package.json
duin-functions/getsoup/: config.ts  index.ts
duin-functions/nft-smartcontract/: README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
duin-functions/savecontract/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: config.ts
getnft/: config.ts  index.ts  package.json  pnpm-lock.yaml
getnft/services/: imageGenerate.ts  nft.ts  s3.ts
getnft/typechain-types/: index.ts
nft-smartcontract/: README.md  hardhat.config.ts
nft-smartcontract/contracts/: DuinNft.sol
nft-smartcontract/test/: DuinNft.ts
rust_tlsn_llm/: Cargo.toml  README.md
rust_tlsn_llm/src/: api_client.rs  config.rs  lib.rs  main.rs  notary.rs  storage.rs  utils.rs
rust_tlsn_llm_verifier/: .gitignore  Cargo.toml
rust_tlsn_llm_verifier/src/: config.rs  main.rs
sendeth/: index.ts
(+67 files in other folders)
