[package]
name = "rust_tlsn_llm_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-rustls = { version = "0.24" }
tokio-util = { version = "0.7" }
dotenv = { version = "0.15.0" }
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = { version = "0.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
bincode = { version = "1.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
chrono = { version = "0.4" }
hex = { version = "0.4" }

notary-client = { git = "https://github.com/tlsnotary/tlsn", rev = "4d5102b", package = "notary-client" }
tlsn-common = { git = "https://github.com/tlsnotary/tlsn", rev = "4d5102b", package = "tlsn-common" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "4d5102b", package = "tlsn-core" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", rev = "4d5102b", package = "tlsn-prover" }

tlsn-utils = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }
tlsn-utils-aio = { git = "https://github.com/tlsnotary/tlsn-utils", rev = "e7b2db6" }

clap = { version = "4.5.29", features = ["derive", "env"] }

reqwest = { version = "0.11", features = ["json"] }